# Django-blog

./: .gitignore  Dockerfile  LICENSE  README.md  compose.yaml  entrypoint.sh  local_postgres.yml  pyproject.toml
blogposts/: models.py  serializers.py  tests.py  urls.py  views.py
blogposts/migrations/: 0001_initial.py
blogs/: settings.py  urls.py
